--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   calendar_date_picker2: ^1.0.3
-  flutter_hooks: any
-  hooks_riverpod: any
+  # flutter_hooks: any
+  # hooks_riverpod: any
+  flutter_riverpod: ^2.5.1
   intl: ^0.19.0
 
 dev_dependencies:
