--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # hooks_riverpod: any
   flutter_riverpod: ^2.5.1
   intl: ^0.19.0
+  http: ^1.2.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
