--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   intl: ^0.19.0
   http: ^1.2.1
   equatable: ^2.0.5
+  shared_preferences: ^2.2.2
+  fl_chart: ^0.65.0
+  jiffy: ^6.2.1
 
 dev_dependencies:
   flutter_test:
