--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  calendar_date_picker2: ^1.0.3
+  calendar_date_picker2: ^2.0.1
   # flutter_hooks: any
   # hooks_riverpod: any
   flutter_riverpod: ^2.5.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   http: ^1.2.1
   equatable: ^2.0.5
   shared_preferences: ^2.3.4
@@ -50,13 +50,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  golden_toolkit: ^0.15.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -124,14 +125,14 @@ flutter:
           weight: 900
     - family: Courier Prime
       fonts:
-        - asset: assets/fonts/Courier Prime.ttf
+        - asset: assets/fonts/Courier_Prime.ttf
           weight: 700
-        - asset: assets/fonts/Courier Prime Bold.ttf
+        - asset: assets/fonts/Courier_Prime_Bold.ttf
           weight: 900
-        - asset: assets/fonts/Courier Prime Bold Italic.ttf
+        - asset: assets/fonts/Courier_Prime_Bold_Italic.ttf
           weight: 900
           style: italic
-        - asset: assets/fonts/Courier Prime Italic.ttf
+        - asset: assets/fonts/Courier_Prime_Italic.ttf
           weight: 700
           style: italic
     - family: Michroma
