--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -76,12 +76,30 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Besley
+      fonts:
+        - asset: assets/fonts/Besley-VariableFont_wght.ttf
+        - asset: assets/fonts/Besley-Italic-VariableFont_wght.ttf
+          style: italic
+    - family: Cabin
+      fonts:
+        - asset: assets/fonts/Cabin-VariableFont_wdth,wght.ttf
+        - asset: assets/fonts/Cabin-Italic-VariableFont_wdth,wght.ttf
+          style: italic
+    - family: Courier_Prime
+      fonts:
+        - asset: assets/fonts/Courier Prime.ttf
+        - asset: assets/fonts/Courier Prime Italic.ttf
+          style: italic
+        - asset: assets/fonts/Courier Prime Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Courier Prime Bold Italic.ttf
+          style: italic
+          weight: 700
+    - family: Calculator_Script_Mt
+      fonts:
+        - asset: assets/fonts/calculator_script_mt.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
