--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_riverpod: ^3.2.1
   fl_chart: ^1.1.1
   shared_preferences: ^2.5.4
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
