--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fl_chart: ^1.1.1
   shared_preferences: ^2.5.4
   intl: ^0.20.2
+  dio: ^5.9.1
 
 dev_dependencies:
   flutter_test:
