--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.5.4
   intl: ^0.20.2
   dio: ^5.9.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
